--- a/James/index.html
+++ b/James/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-    <title>James AI - Image & Text Assistant</title> 
+    <title>James AI - Image & Text Assistant AI</title> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <style> 
         * { 
